fix padding for no-icons; highlight texts on selected primary-lines; add scrollbar styles for atom-panes

--- a/stylesheets/lists.less
+++ b/stylesheets/lists.less
@@ -39,12 +39,19 @@
   .icon:before {
     display: none;
   }
+
+  .no-icon {
+    padding-left: 0;
+  }
 }
 
 .select-list ol.list-group,
 &.select-list ol.list-group {
   li.two-lines {
     .secondary-line { color: @text-color-subtle; }
+    &.selected .primary-line {
+      color: @text-color-highlight;
+    }
     &.selected .secondary-line {
       color: @text-color;
       text-shadow: none;
